--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div class="box radio">
                 <p>Gender</p>
-                <input type="radio" name="male" id="male">
+                <input type="radio" name="gender" id="male">
                 <label for="male">Male</label> <br>
-                <input type="radio" name="female" id="female">
+                <input type="radio" name="gender" id="female">
                 <label for="female">Female</label> <br>
-                <input type="radio" name="other" id="other">
+                <input type="radio" name="gender" id="other">
                 <label for="other">Other</label>
             </div>
             <div class="box">
