--- a/index.html
+++ b/index.html
@@ -1,64 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Netflix-survey</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1 id="title">NET<span>FLIX</span> </h1>
-        <p id="description">Thank you for signing up at Netflix.Tell us more about yourself.</p>
-        <form action="#" id="survey-form">
-            <div class="box box4">
-                <label for="name">Name</label><br>
-                <input type="text" id="name" placeholder="Enter your name"></div>
-            <div class="box box4">
-                <label for="age">Age</label><br>
-                <input type="number" id="age" placeholder="Age"></div>
-            <div class="box box4">
-                <label for="email" >Email</label><br>
-                <input type="email" id="email" placeholder="enter your email"></div>
-            <div class="box box4" >
-                <label for="content">Content Type</label><br>
-                <select name="content" id="content">
-                    <option value="series" checked>Series</option>
-                    <option value="documentary">Documentary</option>
-                    <option value="ovies">Movies</option>
-                    <option value="catoon">Cartoon</option>
-                </select>
-                
-            </div>
-            <div class="box check">
-                <label for="movie">Movie Type</label> <br>
-                <input type="checkbox" name="comedy" id="comedy">
-                <label for="comedy">Comedy</label> <br>
-                <input type="checkbox" name="action" id="action">
-                <label for="action">Action</label> <br>
-                <input type="checkbox" name="romance" id="romance" checked>
-                <label for="romance">Romance</label>
-            </div>
-            <div class="box radio">
-                <p>Gender</p>
-                <input type="radio" name="gender" id="male">
-                <label for="male">Male</label> <br>
-                <input type="radio" name="gender" id="female">
-                <label for="female">Female</label> <br>
-                <input type="radio" name="gender" id="other">
-                <label for="other">Other</label>
-            </div>
-            <div class="box">
-                <label for="feedback">Feedback</label><br>
-                <textarea name="feedback" id="feedback"  placeholder="any comment"></textarea>
-            </div>
-            <div id="submit">
-                <input type="submit" value="Submit">
-            </div>
-
-        </form>
+      <h1 id="title">NET<span>FLIX</span></h1>
+      <p id="description">
+        Thank you for signing up at Netflix.Tell us more about yourself.
+      </p>
+      <form action="#" id="survey-form">
+        <div class="box box4">
+          <label for="name">Name</label><br />
+          <input type="text" id="name" placeholder="Enter your name" />
+        </div>
+        <div class="box box4">
+          <label for="age">Age</label><br />
+          <input type="number" id="age" placeholder="Age" />
+        </div>
+        <div class="box box4">
+          <label for="email">Email</label><br />
+          <input type="email" id="email" placeholder="enter your email" />
+        </div>
+        <div class="box box4">
+          <label for="content">Content Type</label><br />
+          <select name="content" id="content">
+            <option value="series" checked>Series</option>
+            <option value="documentary">Documentary</option>
+            <option value="ovies">Movies</option>
+            <option value="catoon">Cartoon</option>
+          </select>
+        </div>
+        <div class="box check">
+          <label for="movie">Movie Type</label><br />
+          <input type="checkbox" name="movie" id="first-check" value="comedy" />
+          <label for="first-check">Comedy</label><br /><input
+            type="checkbox"
+            name="movie"
+            id="second-check"
+            value="action"
+          />
+          <label for="second-check">Action</label><br /><input
+            type="checkbox"
+            name="movie"
+            id="third-check"
+            value="romance"
+          />
+          <label for="third-check">Romance</label><br />
+        </div>
+        <div class="box radio">
+          <label for="gender">Gender</label><br />
+          <input type="radio" name="gender" id="first-radio" value="male" />
+          <label for="first-radio">Male</label><br />
+          <input type="radio" name="gender" id="second-radio" value="female" />
+          <label for="second-radio">Female</label><br />
+          <input type="radio" name="gender" id="other-radio" value="other" />
+          <label for="other-radio">Other</label><br />
+        </div>
+        <div class="box">
+          <label for="feedback">Feedback</label><br />
+          <textarea
+            name="feedback"
+            id="feedback"
+            placeholder="any comment"
+          ></textarea>
+        </div>
+        <div id="submit">
+          <input type="submit" value="Submit" />
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
