--- a/index.html
+++ b/index.html
@@ -14,25 +14,35 @@
       <p id="description">
         Thank you for signing up at Netflix.Tell us more about yourself.
       </p>
-      <form action="#" id="survey-form">
+      <form action="/result.html" method="get" target="_blank" id="survey-form">
         <div class="box box4">
           <label for="name">Name</label><br />
-          <input type="text" id="name" placeholder="Enter your name" />
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Enter your name"
+          />
         </div>
         <div class="box box4">
           <label for="age">Age</label><br />
-          <input type="number" id="age" placeholder="Age" />
+          <input type="number" name="age" id="age" placeholder="Age" />
         </div>
         <div class="box box4">
           <label for="email">Email</label><br />
-          <input type="email" id="email" placeholder="enter your email" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="enter your email"
+          />
         </div>
         <div class="box box4">
           <label for="content">Content Type</label><br />
           <select name="content" id="content">
             <option value="series" checked>Series</option>
             <option value="documentary">Documentary</option>
-            <option value="ovies">Movies</option>
+            <option value="movies">Movies</option>
             <option value="catoon">Cartoon</option>
           </select>
         </div>
